--- a/node5_routing/Twitter/package.json
+++ b/node5_routing/Twitter/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1"
   }
 }
